--- a/index.html
+++ b/index.html
@@ -1,30 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
 
-    <title>Hello world!</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Math Quiz Game</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <style>
+        body {
+            background-color: #fff;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
 
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+        h1 {
+            margin: 0;
+            padding: 20px;
+            font-size: 36px;
+            /* background-color: #3498db;
+            color: #fff; */
+        }
 
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>
-  <body>
-    <!-- this is the start of content -->
-    <h1>
-      Hello World!
-    </h1>
-    <p>
-      This starter gives you everything you need to start working on a new
-      website, and nothing more. If you're looking for something a little more
-      opinionated, try remixing
-      <a href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-        >~glitch-hello-website</a
-      >.
-    </p>
-  </body>
+        #instructions {
+            font-size: 24px;
+            margin: 20px;
+        }
+
+        .box {
+            width: 100px;
+            height: 100px;
+            margin: 50px;
+            border: 2px solid #999;
+            border-radius: 10px;
+            display: inline-block;
+            text-align: center;
+            line-height: 100px;
+            cursor: pointer;
+        }
+
+        .droppable {
+            border: 2px dashed #3498db;
+            background-color: #f2f2f2;
+            position: relative;
+            /* Add this line */
+        }
+
+        #bottomRow {
+            text-align: center;
+        }
+
+        #submitBtn {
+            width: 200px;
+            height: 50px;
+            border: none;
+            border-radius: 10px;
+            background-color: #3498db;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+      /* Responsive layout for mobile devices */
+@media (max-width: 600px) {
+  .box,
+  .droppable {
+    width: 23%; /* Adjusted width for better mobile display */
+    margin: 5px auto; /* Center the boxes on smaller screens */
+  }
+}
+    </style>
+</head>
+
+<body>
+
+    <h1>Math Quiz Game</h1>
+
+    <div id="instructions">
+        Arrange the equations in the correct order from smallest to largest.
+    </div>
+
+    <div id="topRow">
+        <div class="box draggable" id="box1">(10 + 20)/(30 + 80)</div>
+        <div class="box draggable" id="box2">(4 * 5) - 2</div>
+        <div class="box draggable" id="box3">(10 / 2) + 3</div>
+        <div class="box draggable" id="box4">(7 - 2) * 4</div>
+    </div>
+
+    <div id="bottomRow">
+        <div class="box droppable" id="dropBox1">&nbsp;</div>
+        <div class="box droppable" id="dropBox2">&nbsp;</div>
+        <div class="box droppable" id="dropBox3">&nbsp;</div>
+        <div class="box droppable" id="dropBox4">&nbsp;</div>
+    </div>
+
+    <button id="submitBtn">Submit Answer</button>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="jquery.ui.touch-punch.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".box").draggable({
+                revert: "invalid",
+                helper: "clone", // when you drag, it'll clone it instead of take it with you
+                zIndex: 10000 // this is to make sure the dragged element is always on top
+            });
+
+            $(".box").droppable({
+                accept: ".draggable",
+                drop: function (event, ui) {
+                    if ($(this).hasClass("draggable")) {
+                        ui.draggable.draggable("option", "revert", true);
+                    } else {
+                        $(this).html(ui.draggable.html());
+                        $(this).removeClass("droppable");
+                        $(this).addClass("draggable");
+                        $(this).addClass("nonempty");
+
+
+                        ui.draggable.html("&nbsp;");
+                        ui.draggable.removeClass("draggable");
+                        ui.draggable.removeClass("nonempty");
+                        ui.draggable.addClass("droppable");
+                    }
+                }
+
+            });
+
+            $("#submitBtn").click(function () {
+                const vals = [];
+                $("#bottomRow div").each(function () {
+                    let equation = $(this).text().trim();
+                    if (equation != '') {
+                        console.log("attempt to eval: " + $(this).text().trim());
+                        vals.push(eval($(this).text().trim()));
+                    }
+                });
+                if (vals.length < $("#bottomRow div").length) {
+                    alert("Please fill in all the boxes");
+                } else {
+                    let correct = true;
+                    let previousVal = vals[0];
+                    for (let i = 1; i < vals.length; i++) {
+                        if (previousVal > vals[i]) {
+                            correct = false;
+                            break;
+                        }
+                    }
+                    if (correct) {
+                        alert("Correct!");
+                    } else {
+                        alert("Incorrect!");
+                    }
+                }
+            });
+        });
+    </script>
+</body>
+
 </html>
