🐏🎒 Checkpoint ./.glitch-assets:1551957/1113 ./index.html:1551957/7555 ./script.js:1551957/8927 ./styles.css:1551957/2565

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Brain Fresh Math Quiz Game</title>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.glitch.global/0ebae9e2-be14-479d-8263-ce4db32443db/apple-touch-icon.png?v=1706725662882">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.glitch.global/0ebae9e2-be14-479d-8263-ce4db32443db/favicon-32x32.png?v=1706725671871">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/0ebae9e2-be14-479d-8263-ce4db32443db/favicon-16x16.png?v=1706725667318">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 
 <body>
