⛑🌽 Checkpoint ./styles.css:1551957/4815 ./script.js:1551957/35687 ./index.html:1551957/4834

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Math Quiz Game</h1>
         <div id="instructions">
             Arrange the equations in the correct order from smallest to largest.
-            <div id="statsLink" style="display: none"><a href="stats.html">View your stats</a></div>
+            <div id="statsLink"><a href="stats.html">View your stats</a></div>
         </div>    
     </header>
 
