--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/0ebae9e2-be14-479d-8263-ce4db32443db/favicon-16x16.png?v=1706725667318">
     <link rel="manifest" href="site.webmanifest">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-89Y5ZXF8XG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-89Y5ZXF8XG');
+</script>
 <body>
 
     <header>
