🍭🌉 Checkpoint ./index.html:1551957/5836 ./script.js:1551957/19382 ./stats.html:1551957/5145 ./styles.css:1551957/4917

--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
             <div class="box droppable" id="dropBox3">&nbsp;</div>
             <div class="box droppable" id="dropBox4">&nbsp;</div>
         </div>
+
+        <div id="answerRow">
+            <div id="answerBox1" class="box answerBox">&nbsp;</div>
+            <div id="answerBox2" class="box answerBox">&nbsp;</div>
+            <div id="answerBox3" class="box answerBox">&nbsp;</div>
+            <div id="answerBox4" class="box answerBox">&nbsp;</div>
+        </div>
     
         <button id="submitBtn" disabled="disabled" class="disabled">Submit Answer</button>
-        <button id="playAgainBtn" style="display:none;" class="enabled">Play Again</button>
+        <div>
+            <button id="playAgainBtn" style="display:none;" class="enabled">Play Again</button>
+            <button id="showAnswersBtn" style="display:none;" class="enabled">Show Answers</button>
+        </div>
     </main>
     
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
