--- a/stats.html
+++ b/stats.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <div id="statsRow">
+        <div class="statsRow">
             <div class="statsBox">
                 <div class="header">Attempts</div> 
                 <div class="stat" id="attempts"></div>
@@ -45,6 +45,17 @@
             </div>
             <div class="statsBox">
                 <div class="stat" id="percent"></div>
+            </div>
+        </div>
+        <div class="statsRow">
+            <div class="statsBox"><div class="header">Streaks</div></div>
+            <div class="statsBox">
+                <div class="header">Current</div> 
+                <div class="stat" id="currentStreak"></div>
+            </div>
+            <div class="statsBox">
+                <div class="header">Longest</div> 
+                <div class="stat" id="longestStreak"></div>
             </div>
         </div>
 
